Comp. orders endpoint unit tests
