# app/static/swagger.yaml
@@ -606,6 +606,117 @@ paths:
               error: "Inventory item not found"
 
 
+#ORDERS:
+  /orders/:
+    post:
+      tags:
+        - Orders
+      summary: "Create a new order"
+      description: "Creates an order for a customer, adds the requested items, and returns a receipt."
+      parameters:
+        - in: body
+          name: body
+          description: "Customer ID and itmes included in the order"
+          required: true
+          schema: 
+            $ref: "#/definitions/CreateOrder"
+      responses:
+        201:
+          description: "Order successfully created"
+          schema:
+            $ref: "#/definitions/Receipt"
+        400:
+          description: "Invalid request data"
+          schema:
+            $ref: "#/definitions/ValidationError"
+        404:
+          description: "Customer or item not found"
+          schema:
+            $ref: "#/definitions/MessageResponse"
+        500:
+          description: "Unable to create order"
+          schema:
+            $ref: "#/definitions/MessageResponse"
+
+    get: 
+      tags:
+        - Orders
+      summary: "Get all orders"
+      description: "Returns a list of all customer orders."
+      responses:
+        200:
+          description: "Orders successfully retrieved"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Order"
+
+  /orders/{order_id}:
+    get:
+      tags:
+        - Orders
+      summary: "Get an order by ID"
+      description: "Returns a single order using its order ID."
+      parameters:
+        - in: "path"
+          name: "order_id"
+          description: "ID of the order"
+          required: true
+          type: integer
+      responses:
+        200:
+          description: "Order successfully retrieved"
+          schema:
+            $ref: "#/definitions/Order"
+        404:
+          description: "Order not found"
+          schema:
+            $ref: "#definitions/MessageResponse"
+
+    delete:
+      tags:
+        - Orders
+      summary: "Delete an order"
+      description: "Deletes an order and its associated order items."
+      parameters:
+        - in: "path"
+          name: "order_id"
+          description: "ID of the order to delete"
+          required: true
+          type: integer
+      responses:
+        200:
+          description: "Order successfully deleted"
+          schema:
+            $ref: "#/definitions/MessageResponse"
+        404:
+          description: "Order not found"
+          schema:
+            $ref: "#/definitions/MessageResponse"
+        500:
+          description: "Unable to delete order"
+          schema:
+            $ref: "#/definitions/MessaageResponse"
+
+  /orders/{order_id}/receipt:
+    get:
+      tags:
+        - Orders
+      summary: "Get an order receipt"
+      description: "Returns an itemized receipt and total for an existing order."
+      parameters:
+        - in: "path"
+          name: "order_id"
+          description: "ID of the order"
+          required: true
+          type: integer
+      responses:
+        200:
+          description: "Receipt successfully retrieved"
+          schema:
+            $ref: "#/definitions/MessageResponse"
+
+
 
 #EXAMPLES for Responses and Requests
 #CUSTOMER Definitions:
@@ -864,3 +975,125 @@ definitions:
       message:
         type: string
         example: "Inventory item 1 deleted successfully"
+
+
+#ORDERS descriptions:
+  CreateOrder:
+    type: object
+    required: 
+      - customer_id
+      - item_quantity
+    properties:
+      customer_id:
+        type: integer
+        example: 1
+      item_quantity:
+        type: array
+        items:
+          $ref: "#/definitions/OrderItemRequest"
+    example:
+      customer_id: 1
+      item_quantity:
+        - item_id: 1
+          item_quantity: 2
+        - item_id: 2
+          item_quantity: 1
+
+  OrderItemRequest:
+    type: object
+    required:
+      - item_id
+      - item_quantity
+    properties:
+      item_id:
+        type: integer
+        minimum: 1
+        example: 2
+
+  Order:
+    type: object
+    properties:
+      id:
+        type: integer
+        example: 1
+      order_date:
+        type: string
+        format: date
+        example: "2026-07-15"
+      order_items:
+        type: array
+        items:
+          $ref: "#/definitions/OrderItem"
+
+  OrderItem:
+    type: object
+    properties:
+      id: 
+        type: integer
+        example: 1
+      order_id: 
+        type: integer
+        example: 1
+      item_id: 
+        type: integer
+        example: 1
+      quantity: 
+        type: integer
+        example: 2
+
+  Receipt:
+    type: object
+    properties:
+      order_id: 
+        type: integer
+        example: 1
+      customer_id:
+        type: integer
+        example: 1
+      order_date:
+        type: string
+        format: date
+        example: "2026-07-15"
+      items: 
+        type: array
+        items: 
+          $ref: "#/definitions/ReceiptItem"
+        total:
+          type: number
+          format: float
+          example: 92.48
+
+  ReceiptItem:
+    type: object
+    properties:
+      item: 
+        type: string
+        example: "Brake Pads"
+      quantity: 
+        type: integer
+        example: 2
+      price: 
+        type: number
+        format: float
+        example: 39.99
+      subtotal: 
+        type: number
+        format: float
+        example: 79.98
+
+  MessageResponse:
+    type: object
+    properties:
+      message:
+        type: string
+        example: "Order not found"
+
+  ValidationError:
+    type: object
+    additionalProperties:
+      type: array
+      items:
+        type: string
+    example:
+      customer_id:
+        - "Missing data for required field."
